--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,18 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>React App</title>
+
+  <style>
+    .active{
+        background: orange;
+        color: white;
+    }
+    .name{
+        width: 100px;
+        height:50px;
+        display: block;
+    }
+  </style>
 </head>
 
 <body>
